--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ coreschema==0.0.4
 Django==3.0.5
 django-cors-headers==3.2.1
 django-grappelli==2.14.1
+django-ical==1.7.0
 django-oauth-toolkit==1.3.2
+django-recurrence==1.10.2
 djangorestframework==3.11.0
 djangorestframework-camel-case==1.1.2
 drf-yasg==1.17.1
+icalendar==4.0.5
 idna==2.9
 inflection==0.4.0
 itypes==1.1.0
@@ -19,6 +22,7 @@ mysqlclient==1.4.6
 oauthlib==3.1.0
 packaging==20.3
 pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.23.0
 ruamel.yaml==0.16.10
