--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   web:
     build: .
-    command: bash -c "python manage.py runserver 0:8000"
+    command: bash -c "./build_without_venv.sh && python manage.py runserver 0:8000"
     container_name: scolendar_api
     volumes:
       - .:/scolendar
