--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+arrow==0.14.7
 asgiref==3.2.7
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -6,13 +7,12 @@ coreschema==0.0.4
 Django==3.0.6
 django-cors-headers==3.2.1
 django-grappelli==2.14.2
-django-ical==1.7.0
 django-oauth-toolkit==1.3.2
 django-recurrence==1.10.3
 djangorestframework==3.11.0
 djangorestframework-camel-case==1.1.2
 drf-yasg==1.17.1
-icalendar==4.0.6
+ics==0.7
 idna==2.9
 inflection==0.4.0
 itypes==1.2.0
@@ -28,5 +28,6 @@ ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 six==1.14.0
 sqlparse==0.3.1
+TatSu==4.4.0
 uritemplate==3.0.1
 urllib3==1.25.9
