--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.0.6
 django-cors-headers==3.2.1
+django-filter==2.2.0
 django-grappelli==2.14.2
 django-oauth-toolkit==1.3.2
 django-recurrence==1.10.3
@@ -20,6 +21,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 packaging==20.3
+psycopg2==2.8.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
