--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   db:
     image: postgres
     restart: always
+    ports:
+      - 5432:5432
     environment:
       POSTGRES_USER: scolendar
       POSTGRES_PASSWORD: passwdtest
@@ -13,7 +15,7 @@ services:
     build: .
     restart: always
     ports:
-      - 8000:8000
+      - 3030:3030
     links:
       - "db:database"
     depends_on:
