--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-arrow==0.15.6
+arrow==0.14.7
 asgiref==3.2.7
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -12,7 +12,7 @@ django-oauth-toolkit==1.3.2
 django-recurrence==1.10.3
 djangorestframework==3.11.0
 djangorestframework-camel-case==1.1.2
-drf-yasg==1.17.1
+drf-yasg[validation]==1.17.1
 ics==0.7
 idna==2.9
 inflection==0.4.0
